chore: Update deployment workflow to use build.sh script

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,4 +16,5 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           cd /var/www/ATB-Bus-22-api/
+          chmod +x build.sh
           ./build.sh
